--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,14 @@
             android:textColor="#707070"
             android:textSize="24dp" />
 
+        <Button
+            android:id="@+id/history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Transaction History"
+
+            android:backgroundTint="#707070"/>
+
 
     </LinearLayout>
 
