--- a/app/src/main/res/layout/activity_debit.xml
+++ b/app/src/main/res/layout/activity_debit.xml
@@ -6,42 +6,77 @@
     android:layout_height="match_parent"
     android:background="#FFD449"
     android:orientation="vertical"
-    tools:context=".Debit">
+    tools:context=".Debit"
+    android:padding="30dp">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/enter_your_debit_details"
+        android:fontFamily="serif"
         android:textColor="#ffffff"
-        android:textSize="48sp" />
+        android:textSize="40sp"
+        android:textStyle="bold"/>
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="10dp"
+        android:layout_gravity="center"
+        android:text=""
+        android:textColor="#101010"
+        android:textSize="5dp" />
 
     <EditText
         android:id="@+id/debitamount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:textColor="#ffffff"
-        android:textSize="40sp"
+        android:textColor="#000000"
+        android:textSize="30sp"
         android:hint="@string/amount"
         android:inputType="number"
         android:autofillHints="" />
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        android:layout_gravity="center"
+        android:text=""
+        android:textColor="#101010"
+        android:textSize="5dp" />
 
     <EditText
         android:id="@+id/debitreason"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:textColor="#ffffff"
-        android:textSize="40sp"
+        android:textColor="#000000"
+        android:textSize="30sp"
         android:hint="@string/source"
         android:inputType="textLongMessage"
         android:autofillHints="" />
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:text=""
+        android:textColor="#101010"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/submitdebit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/submit" />
+        android:text="@string/submit"
+        android:textColor="#FFC107"
+        android:textStyle="bold"
+        android:backgroundTint="#ffffff"
+        android:fadingEdge="horizontal"
+        app:cornerRadius="10dp"/>
 
 </LinearLayout>
