--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFD449"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <ImageView
         android:id="@+id/imageView"
@@ -23,7 +24,8 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
         android:orientation="vertical"
         tools:layout_editor_absoluteX="129dp"
         tools:layout_editor_absoluteY="211dp">
@@ -56,7 +58,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
-            android:layout_height="100dp">
+            android:layout_height="100dp"
+            >
 
             <Button
                 android:layout_margin="17dp"
@@ -67,7 +70,8 @@
                 android:shadowColor="@color/black"
                 android:text="add Credit"
                 android:textStyle="bold"
-                app:backgroundTint="#707070" />
+                app:backgroundTint="#707070"
+                />
 
             <Button
                 android:layout_margin="17dp"
@@ -89,8 +93,9 @@
             android:layout_height="37dp"
             android:gravity="center_horizontal"
             android:textAlignment="center"
-            android:textColor="#707070"
-            android:textSize="24dp" />
+            android:textColor="#000000"
+            android:textSize="24dp"
+            android:backgroundTint="@color/white"/>
 
 
     </LinearLayout>
@@ -108,6 +113,17 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        app:cornerRadius="10dp"
+        />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="165dp"
+        tools:layout_editor_absoluteY="117dp"
+        >
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
